--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Ionic4BarcodeScanner</string>
-    <string name="title_activity_main">Ionic4BarcodeScanner</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="fileprovider_authority">io.ionic.starter.fileprovider</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">app-consumidor</string>
+    <string name="title_activity_main">app-consumidor</string>
+    <string name="package_name">io.ionic.starter.app.consumidor</string>
+    <string name="fileprovider_authority">io.ionic.starter.app.consumidor.fileprovider</string>
+    <string name="custom_url_scheme">io.ionic.starter.app.consumidor</string>
 </resources>
